--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "update:ios": "bun eas update -p ios --channel production",
+    "deploy:ios": "bun eas build --platform ios --profile production --auto-submit"
   },
   "dependencies": {
+    "@expo/ui": "~0.1.1-alpha.4",
     "expo": "^53.0.0-preview.11",
     "expo-constants": "~17.1.2",
+    "expo-dev-client": "~5.1.3",
     "expo-linking": "~7.1.2",
     "expo-router": "~5.0.2-preview.5",
+    "expo-sqlite": "~15.2.6",
     "expo-status-bar": "~2.2.1",
+    "expo-symbols": "~0.4.2",
+    "expo-updates": "~0.28.6",
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-safe-area-context": "5.3.0",
@@ -22,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "eas-cli": "^16.3.2",
     "typescript": "^5.3.3"
   },
   "private": true
