--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "^53.0.0-preview.11",
     "expo-application": "~6.1.2",
     "expo-constants": "~17.1.2",
+    "expo-crypto": "~14.1.3",
     "expo-dev-client": "~5.1.3",
     "expo-insights": "~0.9.2",
     "expo-linking": "~7.1.2",
@@ -28,7 +29,8 @@
     "react-native": "0.79.1",
     "react-native-safe-area-context": "5.3.0",
     "react-native-screens": "~4.10.0",
-    "react-native-vision-camera": "^4.6.4"
+    "react-native-vision-camera": "^4.6.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
