--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "deploy:ios": "eas build --platform ios --profile production --auto-submit"
   },
   "dependencies": {
-    "@expo/ui": "~0.1.1-alpha.4",
-    "expo": "^53.0.0-preview.11",
-    "expo-application": "~6.1.2",
-    "expo-constants": "~17.1.2",
+    "@expo/ui": "~0.1.1-alpha.5",
+    "expo": "~53.0.0-preview.12",
+    "expo-application": "~6.1.3",
+    "expo-constants": "~17.1.3",
     "expo-crypto": "~14.1.3",
-    "expo-dev-client": "~5.1.3",
+    "expo-dev-client": "~5.1.4",
     "expo-insights": "~0.9.2",
-    "expo-linking": "~7.1.2",
-    "expo-router": "~5.0.2-preview.5",
-    "expo-sqlite": "~15.2.6",
-    "expo-status-bar": "~2.2.1",
-    "expo-symbols": "~0.4.2",
-    "expo-updates": "~0.28.6",
+    "expo-linking": "~7.1.3",
+    "expo-router": "~5.0.2-preview.6",
+    "expo-sqlite": "~15.2.7",
+    "expo-status-bar": "~2.2.2",
+    "expo-symbols": "~0.4.3",
+    "expo-updates": "~0.28.7",
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-safe-area-context": "5.3.0",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "eas-cli": "^16.3.2",
+    "eas-cli": "^16.3.3",
     "typescript": "^5.3.3"
   },
   "private": true
