--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web",
     "update:ios": "eas update -p ios --channel production",
     "deploy:ios": "eas build --platform ios --profile production --auto-submit",
-    "build:web": "expo export --platform web --clear"
+    "build:web": "expo export --platform web --clear",
+    "deploy:web": "bun build:web && eas deploy"
   },
   "dependencies": {
     "@expo/ui": "~0.1.1-alpha.5",
