--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "ios": "expo run:ios",
     "ios:update": "eas update -p ios --channel production",
     "ios:deploy": "eas build --platform ios --profile production --auto-submit && bun ios:metadata",
-    "ios:metatadata": "eas metadata:push",
+    "ios:metadata": "eas metadata:push",
     "web": "expo start --web",
     "web:build": "expo export --platform web --clear",
     "web:deploy": "bun web:build && eas deploy"
   },
   "dependencies": {
     "@expo/ui": "~0.1.1-alpha.5",
-    "expo": "~53.0.0-preview.12",
+    "expo": "~53.0.0",
     "expo-application": "~6.1.3",
     "expo-constants": "~17.1.3",
     "expo-crypto": "~14.1.3",
-    "expo-dev-client": "~5.1.4",
+    "expo-dev-client": "~5.1.5",
     "expo-insights": "~0.9.2",
     "expo-linking": "~7.1.3",
-    "expo-router": "~5.0.2-preview.6",
+    "expo-router": "~5.0.3",
     "expo-sqlite": "~15.2.7",
     "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
-    "expo-updates": "~0.28.7",
+    "expo-updates": "~0.28.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.1",
