add native module

--- a/modules/expo-tree-view/expo-module.config.json
+++ b/modules/expo-tree-view/expo-module.config.json
@@ -1,6 +1,6 @@
 {
   "platforms": ["apple"],
   "apple": {
-    "modules": ["SampleButtonModule"]
+    "modules": ["SampleButtonModule", "TreeViewModule"]
   }
 }
