--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.1",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "prebuild": "expo prebuild --clean",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "ios": "bun ios:prebuild && expo run:ios",
+    "ios:prebuild": "expo prebuild --platform ios --clean",
     "ios:update": "eas update -p ios --channel production",
-    "ios:deploy": "eas build --platform ios --profile production --auto-submit && bun ios:metadata",
+    "ios:deploy": "bun ios:prebuild && eas build --platform ios --profile production --auto-submit && bun ios:metadata",
     "ios:metadata": "eas metadata:push",
     "web": "expo start --web",
     "web:build": "expo export --platform web --clear",
